<resources>
    <string name="app_name">Ceeq</string>
    <string name="app_id">413219985467370</string>
    <string name="app_welcome">Hi,  </string>
    <string name="app_version">1.0.5 Beta</string>
    <string name="blank"></string>
    <string name="coming_soon">Coming Soon &#8230;</string>
    <string name="google">Google</string>
    <string name="feedback">Suggestions &amp; Feedback</string>
    <string name="play_services">Play Services</string>
    <string name="_">" : "</string>
    <string name="ceeq_india">©Ceeq India</string>
    <string name="ceeq_link">www.ceeq.in</string>
    <string name="ceeq_support_email">support@ceeq.in</string>
    <string name="ceeq_play_link">https://play.google.com/store/apps/details?id=in.ceeq</string>
    <string-array name="backup_options">
        <item>All</item>
        <item>Contacts</item>
        <item>Messages</item>
        <item>Call Logs</item>
        <item>User Dictionary</item>
    </string-array>
    <string-array name="wipe_options">
        <item>External Storage</item>
        <item>Device</item>
        <item>Device &amp; External Storage</item>
    </string-array>
    <string name="my_device"> My device</string>
    <string name="tab_home">Home</string>
    <string name="tab_backup">Backups</string>
    <string name="tab_security">Security</string>
    <string name="tab_spam">AntiSpam</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="menu_feedback">Support</string>
    <string name="share">Share</string>
    <string name="rate">Rate us</string>
    <string name="about">About</string>
    <string name="privacy">Privacy</string>
    <string name="exit">Exit</string>
    <string name="navigate">Navigate</string>
    <string name="more">More</string>
    <string name="dialog_title_backup">Choose to Backup</string>
    <string name="dialog_title_restore">Choose to Restore</string>
    <string name="dialog_title_wipe">Choose to Wipe</string>
    <string name="dialog_title_stealth">Enable Stealth Mode</string>
    <string name="dialog_title_blip">Enable Auto blip</string>
    <string name="dialog_title_feedback">Send feedback</string>
    <string name="dialog_title_protect">Enable Protect Me</string>
    <string name="dialog_title_device_admin">Activate Device Administration</string>
    <string name="dialog_title_wipe_device">Note</string>
    <string name="quick_backup">One Click Backup</string>
    <string name="quick_restore">Quick Restore</string>
    <string name="view_backups">View Backups &amp; Restore</string>
    <string name="activate">Activate</string>
    <string name="backup_button">Backup</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_b">Sim Change</string>
    <string name="wipe_device">Wipe Device</string>
    <string name="external_storage">External</string>
    <string name="wipe_cache">Wipe Cache</string>
    <string name="hint_lock">Lock the device</string>
    <string name="locked">Locked</string>
    <string name="hint_user">User picture</string>
    <string name="open_drawer">Open Menu</string>
    <string name="close_drawer">Close Menu</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="support">Support</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="finish">Finish</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="later">Later</string>
    <string name="okay">Okay</string>
    <string name="note">Note</string>
    <string name="enable">Enable</string>
    <string name="continue_">Continue</string>
    <string name="new_emergency_message">New Emergency Message</string>
    <string name="enter_your_old_pin">Enter your old PIN</string>
    <string name="enter_6_digit_pin">Enter 6 digit PIN</string>
    <string name="enter_6_digit_new_pin">Enter 6 digit new PIN</string>
    <string name="protect_me">Protect Me</string>
    <string name="stealth_mode">Stealth Mode</string>
    <string name="auto_track">Auto Track</string>
    <string name="auto_blips">Auto Blips</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="device_admin">Device Administrator</string>
    <string name="online_sync">Online Sync</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="device_locked">Device Locked</string>
    <string name="digitalclock">Digital_Clock</string>
    <string name="ceeq_logo">Ceeq_Logo</string>
    <string name="enter_device_passcode">Enter Device PIN</string>
    <string name="made_india">Opensource ♥ India</string>
    <string name="app_status_good">Protected</string>
    <string name="app_status_bad">Vulnerable</string>
    <string name="status_note_0">You are protected.</string>
    <string name="status_note_1">Automatic backups are disabled.</string>
    <string name="status_note_2">Automatic tracking is disabled.</string>
    <string name="status_note_3">GPS is disabled.</string>
    <string name="status_note_4">Device Administration is disabled.</string>
    <string name="status_note_5">Last backup was more than 3 days ago.</string>
    <string name="notifications">Notifications</string>
    <string name="status_note_6">No backups taken yet</string>
    <string name="status_note_7">Today</string>
    <string name="status_note_8">Yesterday</string>
    <string name="status_note_9">Two days ago</string>
    <string name="status_note_10">More than three days ago</string>
    <string name="status_note_11">More than a week ago</string>
    <string name="title_activity_playservice">Google Play</string>
    <string name="title_activity_display_backups">Explorer</string>
    <string name="title_activity_startup">Setup</string>
    <string name="connected_account">Connected Account</string>
    <string name="your_name">Your Name</string>
    <string name="current_sim_number">Current SIM Number</string>
    <string name="current_user_imsi_number">Current User IMSI Number</string>
    <string name="current_iemi_number">Current IEMI Number</string>
    <string name="total_storage_available_storage">Total Storage : Available Storage</string>
    <string name="total_ram_available_ram">Total RAM : Available RAM</string>
    <string name="total_applications">Total Applications</string>
    <string name="device_pixel_density">Device Pixel Density</string>
    <string name="device_size">Device Size</string>
    <string name="gps_status">GPS Status</string>
    <string name="device_admin_status">Device Admin Status</string>
    <string name="current_mobile_operator">Current Mobile Operator</string>
    <string name="file_name">File Name</string>
    <string name="file_type">File Type</string>
    <string name="file_size">File Size</string>
    <string name="file_creation_date">File creation date</string>
    <string name="intent_type">Intent type</string>
    <string name="wipe_external_storage">Wipe External Storage</string>
    <string name="next_backup_in">Next backup in</string>
    <string name="last_backup">Last backup</string>
    <string name="choose_a_contact">Choose an emergency contact</string>
    <string name="help_note_1">Please Enable Device Administration to access all features of the application, such as Device Wipe, Locking, Encryption etc.</string>
    <string name="help_note_2">Emergency Contacts will be contacted in case you or your mobile are in trouble. Don\&apos;t worry you can change it any time in settings.</string>
    <string name="help_note_3">This will erase all your contacts, messages and settings &amp; application data. Backup important things before you continue.</string>
    <string name="help_note_4">This will hide the application launcher icon &amp; notifications. \n\nYou can start the application by dialing *#2337#*. \n\nAuto tracking, Auto Backups will remained enabled.</string>
    <string name="help_note_5">Click &amp; Hold a file for more options</string>
    <string name="help_note_6">No backup files found.</string>
    <string name="help_note_7">Ceeq is an app to protect you and your device, to backup your data. It provides features such as remote commands, auto backups, sms commands and a lot more to explore.</string>
    <string name="help_note_8">GPS is required for accuracy while getting the location of device, in distress situations or while using the application.</string>
    <string name="help_note_9">Device administrator feature helps the application to wipe, lock your device remotely.</string>
    <string name="help_note_10">Remote Commands are messages which you may send in case your device is lost. 				\n\n To use a remote command, type the remote command, followed by your pin ex. CEEQ LOCATE 000000. 				\n\n The main remote commands are 				\n1. CEEQ ALARM : sounds a loud alarm on your mobile, 				\n2. CEEQ LOCK : locks your device, 				\n3. CEEQ ERASE : completely erases your device of any data, 				\n4. CEEQ NOW : sends you the current sim number, imsi number and other mobile details, 				\n5. CEEQ CALLS : sends you the last 10 called numbers, 				\n6. CEEQ SPY : spies on the device location and calls and send them to you, 				\n7. CEEQ LOCATE : sends you the last stored location, and any new location if location of mobile changes.</string>
    <string name="help_note_11">We have explained each and every permission at http://www.ceeq.in/permissions. \nStill, they are just required to give you most features.</string>
    <string name="help_note_12">Protect me feature has been added for distress situations, just double tap power button and rapidly tap Home button to send an SOS message to your emergency contact.\nThe same message will be posted to you social accounts too.</string>
    <string name="help_note_13">Online Sync, saves your backup data over Google Drive, which are used to restore data if in case you loose your phone or SD card.</string>
    <string name="help_note_14">One click backup simply backs up everything i.e contacts, messages, call logs, etc just by one click.</string>
    <string name="help_note_15">Stealth Mode hides the application icon &amp; its notifications.\nDon\'t worry you can still launch the application by dialing *#*#2337#*#*. Note, it won\'t stops the background process such as Auto Backups, or device Tracking</string>
    <string name="help_note_16">We highly respect your privacy and data, and so this application in no way collects any data from your mobile.\nWe just store your email address, so you can access the application from the web, seriously that\'s all we need.</string>
    <string name="help_note_17">Yup, we are right at your back.\nContact us anytime by sending us your message at \nsupport@ceeq.in \nor visiting and posting at \nhttp://ceeq.in/contact, \nwe will contact you within minutes, okay mostly in an hour ;).</string>
    <string name="help_note_19">Connect your social accounts</string>
    <string name="help_note_20">P.S. Your Google account is connected.</string>
    <string name="help_note_29">Write a distress message</string>
    <string name="help_note_30">Note. This will be sent to your emergency contact &amp; posted to your social accounts.</string>
    <string name="help_note_31">Write your message.</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="date">Date</string>
</resources>