<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
        android:id="@+id/actionHelp"
        android:icon="@drawable/ic_help"
        android:showAsAction="always|withText"
        android:title="@string/help"/>
     
     <item
        android:id="@+id/menuSettings"
        android:icon="@drawable/ic_settings"
        android:showAsAction="always"
        android:title="@string/settings"/>

    <!--<item
        android:id="@+id/menuFeedback"
        android:showAsAction="never"
        android:title="@string/support"/>
    
    <item
        android:id="@+id/menuPrivacy"
        android:showAsAction="never"
        android:title="@string/privacy"/>
    
    <item
        android:id="@+id/menuAbout"
        android:showAsAction="never"
        android:title="@string/about"/> -->
	<item
        android:id="@+id/menuShare"
        android:showAsAction="never"
        android:title="@string/share"/>
    <item
        android:id="@+id/menuExit"
        android:showAsAction="never"
        android:title="@string/exit"/>

</menu>