<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_main"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_bg_white"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected_account"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_sim_number"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_sim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_user_imsi_number"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_imsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_iemi_number"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_iemi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_status"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_admin_status"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_mobile_operator"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_size"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_pixel_density"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_pixels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_applications"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_ram_available_ram"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_ram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_storage_available_storage"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/c_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#454545" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/ic_bg_shadow" />
    </LinearLayout>

</ScrollView>