<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="#f2f2f2"
	android:orientation="vertical"
	android:padding="8dp" >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:orientation="vertical" >
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight=".5"
				android:text="@string/name"
				android:textColor="#454545"
				android:textSize="16sp"
				android:textStyle="bold" />
			<TextView
				android:id="@+id/vfileName"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight=".5"
				android:text="@string/type"
				android:textColor="#454545"
				android:textSize="16sp"
				android:textStyle="bold" />
			<TextView
				android:id="@+id/vfileType"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight=".5"
				android:text="@string/date"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#454545"
				android:textSize="16sp"
				android:textStyle="bold" />
			<TextView
				android:id="@+id/vfileDate"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight=".5"
				android:text="@string/size"
				android:textColor="#454545"
				android:textSize="16sp"
				android:textStyle="bold" />
			<TextView
				android:id="@+id/vfileSize"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2" />
		</LinearLayout>
	</LinearLayout>
	<View
		android:layout_width="wrap_content"
		android:layout_height="1dp"
		android:background="@color/shadow_grey" />
</LinearLayout>