<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f2f2f2"
    android:orientation="vertical"
    android:padding="8dp" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/app_version"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#434343" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:autoLink="web"
        android:gravity="center_horizontal"
        android:text="@string/ceeq_link"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#f4f4f4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:background="@drawable/ic_bg_white"
        android:gravity="left"
        android:padding="8dp"
        android:text="@string/help_note_7"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#606060"
        android:textSize="14sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/ic_bg_shadow" />

</LinearLayout>