<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f2f2f2"
    android:orientation="vertical"
    android:padding="8dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_bg_white"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/social_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/help_note_19"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_dark"
                android:textSize="14sp"
                android:textStyle="bold" />
<!--  
            <com.facebook.widget.LoginButton
                android:id="@+id/facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="10dp"
                fb:login_text="Connect Facebook" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_bg_white"
                android:gravity="left"
                android:text="@string/help_note_20"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_light"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/help_note_29"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/distressMessage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="0dp"
            android:background="@drawable/ic_bg_text"
            android:ems="10"
            android:gravity="left"
            android:hint="@string/help_note_31"
            android:inputType="text|textMultiLine"
            android:textSize="14sp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@drawable/ic_bg_shadow_light" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_bg_white"
            android:text="@string/help_note_30"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/text_light"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/ic_bg_shadow" />

</LinearLayout>